Fix the navigation child menu invisible bug.

--- a/css/common.css
+++ b/css/common.css
@@ -58,7 +58,7 @@
   padding: 0;
 }
 .panel-wrapper {
-  position: relative;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
