--- a/less/utilities.less
+++ b/less/utilities.less
@@ -156,7 +156,7 @@
 
 //#$Panel
 .panel-wrapper{
-    position: relative;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
